# libcpp-channel

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: linux.yml  windows.yml
examples/: CMakeLists.txt  multiple-producer-multiple-consumer.cpp  multiple-producer-single-consumer.cpp  single-producer-multiple-consumer.cpp  single-producer-single-consumer.cpp
src/: libcpp-channel.hpp
test/: CMakeLists.txt  test.cpp
